--- a/ShadowMap/ShadowMap.html
+++ b/ShadowMap/ShadowMap.html
@@ -1,7 +1,27 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <script id="vertex-shader" type="x-shader/x-vertex">
+    <script id="vertex-shader1" type="x-shader/x-vertex">
+        attribute vec4 vPosition;
+
+        uniform mat4 pmvMatrixFromLight;
+
+        void main()
+        {
+            gl_Position = pmvMatrixFromLight * vPosition;
+        }
+    </script>
+
+    <script id="fragment-shader1" type="x-shader/x-fragment">
+        precision mediump float;
+
+        void main() {
+            // Write the z-value in R
+            gl_FragColor = vec4(gl_FragCoord.z, 0.0, 0.0, 0.0);
+        }
+    </script>
+
+    <script id="vertex-shader2" type="x-shader/x-vertex">
 
         attribute vec4 vPosition;
         attribute vec3 vNormal;
@@ -14,6 +34,10 @@
         uniform float shininess;
 
         varying vec4 fColor;
+
+        uniform mat4 pmvMatrixFromLight;
+        varying vec4 fPositionFromLight;
+        varying float normShadowVal;
 
         void main()
         {
@@ -48,26 +72,46 @@
             gl_Position = projectionMatrix * modelViewMatrix * vPosition;
             fColor = ambient + diffuse + specular;
             fColor.a = 1.0;
+
+            fPositionFromLight = pmvMatrixFromLight * vPosition;
+            normShadowVal = specular.a;
         }
     </script>
 
-    <script id="fragment-shader" type="x-shader/x-fragment">
+    <script id="fragment-shader2" type="x-shader/x-fragment">
 
         precision mediump float;
 
+        uniform sampler2D shadowTexture;
+
         varying vec4 fColor;
+        varying vec4 fPositionFromLight;
+        varying float normShadowVal;
 
         void main()
         {
-            gl_FragColor = fColor;
-        }
+            vec3 shadowCoord = (fPositionFromLight.xyz/fPositionFromLight.w)/2.0 + 0.5;
 
+            vec4 rgbaDepth = texture2D(shadowTexture, shadowCoord.xy);
+
+            float depth = rgbaDepth.r; // Retrieve the z-value from R
+
+            float visibility = (shadowCoord.z > depth + 0.005) ? 0.3 : 1.0;
+
+            gl_FragColor = vec4(fColor.rgb * visibility, fColor.a);
+        }
     </script>
 
     <script type="text/javascript" src="Common/webgl-utils.js"></script>
     <script type="text/javascript" src="Common/initShaders.js"></script>
     <script type="text/javascript" src="Common/MV.js"></script>
     <script type="text/javascript" src="ShadowMap.js"></script>
+    <script type="text/javascript" src="Objs/Polyhedron.js"></script>
+    <script type="text/javascript" src="Objs/battledrone.js"></script>
+    <script type="text/javascript" src="Objs/duck.js"></script>
+    <script type="text/javascript" src="Objs/teapot.js"></script>
+    <script type="text/javascript" src="Objs/tree.js"></script>
+    <script type="text/javascript" src="LoadObjNoTexture.js"></script>
 </head>
 
 <body>
@@ -84,6 +128,31 @@
             <td valign="top" width="300">
 
                 <br /><br /><br /><br /><br /><br /><br />
+                Select an Object:
+                <select id="selObject" size="1">
+                    <option value="0" selected="selected">Sphere</option>
+                    <option value="1">Polyhedron</option>
+                    <option value="2">Battledrone</option>
+                    <option value="3">Duck</option>
+                    <option value="4">Teapot</option>
+                    <option value="5">Tree</option>
+                </select>
+
+                <br />
+                <br />
+
+                Object's Vertical Position:
+                <br />-2.5
+                <input id="oYPos" type="range" min="-2.5" max="2.5" step="0.1" value="0" /> 2.5
+
+                <br />
+                <br />
+
+                <button id="rotateX">Rotate X</button>
+                <button id="rotateY">Rotate Y</button>
+                <button id="rotateZ">Rotate Z</button>
+                <br />
+                <button id="toggleRotation">Toggle Rotation</button>
 
             </td>
         </tr>
